changes for divs

--- a/indexClock.html
+++ b/indexClock.html
@@ -4,8 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <meta charset="utf-8">
   <title>TY3 Tech</title>
-  <link rel="stylesheet" href="Ty3CSS/Ty3CSS.css" type="text/css" />
+  <link rel="stylesheet" href="Ty3CSS/Ty3CSS.css" type="text/css">
   <script type="text/javascript" src="Ty3JS/Ty3JS.js"> </script>
 
 </head>
@@ -21,7 +22,7 @@
 
     <!--div class header ends-->
 
-    <!-- ceates page content container-->
+    <!-- creates page content container-->
     <div class="content">
 
       <!-- creates a digital date display
@@ -56,7 +57,7 @@
           <fieldset>
             <legend>TY3 News</legend>
             <input type="text" name="text" style="color:#359BBD;" size="50"
-              value=" business dahboards.  offline.  online.  login to better decision making.  " />
+              value=" business dashboards.  offline.  online.  login to better decision making.  " />
           </fieldset>
         </form>
 
